--- a/app/index.html
+++ b/app/index.html
@@ -4,12 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Go Surf</title>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,300;0,400;0,800;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
   <header class="header">
+      <div class="header_title">
+          GO
+          SURF
+      </div>
+      <div class="header_aside">
+        <div class="logo">
+            <a href="#">
+                <img src="img/logo.svg" alt="">
+            </a>
+        </div>
+          <nav class="menu">
+              <ul class="menu_list">
+                  <li><a href="#"><img src="img/nav-ico-1.svg" alt=""><span>Surf</span></a></li>
+                  <li><a href="#"><img src="img/nav-ico-2.svg" alt=""><span>Travel</span></a></li>
+                  <li><a href="#"><img src="img/nav-ico-3.svg" alt=""><span>Sleep</span></a></li>
+                  <li><a href="#"><img src="img/nav-ico-4.svg" alt=""><span>Shop</span></a></li>
+              </ul>
+          </nav>
+          <div class="header_search">
+              <img src="img/search.svg" alt="">
+          </div>
+          <div class="header_date">
+              29
+              <span>08 | 2020</span>
+          </div>
+          <div class="header_location">
+              California
+          </div>
+      </div>
     <div class="header_slider">
       <div class="header_slider-item slider-item">
         <div class="slider-item_info">
@@ -17,7 +46,7 @@
           <div class="slider-item_info-title">North Shore</div>
           <div class="slider-item_info-subtext subtitle-left">Condition</div>
           <div class="slider-item_info-text">Radical</div>
-            <a href="@" class="slider-item_info-link">
+            <a href="#" class="slider-item_info-link">
                 <img src="img/arrows-right.svg" alt="arrows-right">
             </a>
         </div>
@@ -28,7 +57,7 @@
                 <div class="slider-item_info-title">South Shore</div>
                 <div class="slider-item_info-subtext subtitle-left">Condition</div>
                 <div class="slider-item_info-text">Radical</div>
-                <a href="@" class="slider-item_info-link">
+                <a href="#" class="slider-item_info-link">
                     <img src="img/arrows-right.svg" alt="arrows-right">
                 </a>
             </div>
@@ -39,7 +68,7 @@
                 <div class="slider-item_info-title">West Shore</div>
                 <div class="slider-item_info-subtext subtitle-left">Condition</div>
                 <div class="slider-item_info-text">Radical</div>
-                <a href="@" class="slider-item_info-link">
+                <a href="#" class="slider-item_info-link">
                     <img src="img/arrows-right.svg" alt="arrows-right">
                 </a>
             </div>
@@ -50,7 +79,7 @@
                 <div class="slider-item_info-title">Est Shore</div>
                 <div class="slider-item_info-subtext subtitle-left">Condition</div>
                 <div class="slider-item_info-text">Radical</div>
-                <a href="@" class="slider-item_info-link">
+                <a href="#" class="slider-item_info-link">
                     <img src="img/arrows-right.svg" alt="arrows-right">
                 </a>
             </div>
