--- a/app/index.html
+++ b/app/index.html
@@ -151,8 +151,8 @@
     <section class="surf">
         <div class="title">
           <span>
-              serf
-              <h3>serf</h3>
+              surf
+              <h3>surf</h3>
           </span>
         </div>
         <div class="surf_subtitle">
@@ -160,6 +160,21 @@
         <div class="subtitle-left">Current location</div>
             <div class="subtitle_head">California <span>|</span> USA</div>
         </div>
+        </div>
+        <div class="serf-slider">
+            <div class="serf-box">
+                <div class="serf-box_inner">
+                    <div class="serf-box_inner-title">
+                        <div class="serf-box_inner-location">
+                            <div class="btn-box">
+                                <a class="btn" href="#">
+                                    view <span>surf</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <section class="travel">
